New custom styles, thumbnail and screenshot.

--- a/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/docroot/WEB-INF/liferay-plugin-package.properties
@@ -4,7 +4,7 @@ module-incremental-version=1
 tags=
 short-description=
 change-log=
-page-url=http://www.liferay.com
-author=Liferay, Inc.
-licenses=LGPL
+page-url=http://www.sonicon.net
+author=R.Sicart
+licenses=BSD
 liferay-versions=6.1.1
